[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Pushikoo" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["pushikoo-interface>=0.3.0", "requests", "loguru"]
description = "TestProcesser for pushikoo-adapter development as a template."
name = "pushikoo-adapter-testprocesser"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.urls]
"Homepage" = "https://github.com/Pushikoo/pushikoo-adapter-testprocesser"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/.vscode", "/uv.lock", "/.gitignore"]

[tool.hatch.version]
source = "vcs"

[project.entry-points."pushikoo.adapter"]
# TODO: Define your adapter export point here
testprocesser = "pushikoo_adapter_testprocesser:TestProcesser"
